remove disabled stuff for now

--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -320,10 +320,10 @@
 			</div>
 		</li>
 		<li>
-			<div class="grid-100 mobile-grid-100" style="text-transform:capitalize;">
+			<!--<div class="grid-100 mobile-grid-100" style="text-transform:capitalize;">
 				<p><label>Bill to:</label> <span style="font-size: 10px;">****-****-****-</span>xxxxx</p>
 				<p><label>Total charge:</label> xxxxx</p>
-			</div>
+			</div>-->
 		</li>
 	</ul>
 </div>
