--- a/app/views/mBilling.html
+++ b/app/views/mBilling.html
@@ -4,11 +4,12 @@
 	Welcome to your billing HQ. You can manage transactions, add new payment methods, and transfer inactive spend into your other
 	campaigns.
 	<br><br>
-	<b>
-						ACTIVE campaign budget: <span style="color:#23c466; font-size: 16px;">$209</span> </b><br> INACTIVE budget credit:
+	<!--<b>
+	ACTIVE campaign budget: <span style="color:#23c466; font-size: 16px;">$209</span> </b>
+	<br> INACTIVE budget credit:
 	<b>$84</b> | What is this? This is the amount of currency USD, which resides inside of inactive or archived/ deleted campaigns
 	you've previously made. When you create your next campaign, we will automatically draw from this inactive credit amount
-	before we charge your payment method on file further.
+	before we charge your payment method on file further.-->
 
 </div>
 
