--- a/app/views/mBilling.html
+++ b/app/views/mBilling.html
@@ -1,15 +1,12 @@
 <h2 class="heading">Manage billing &amp; payment options</h2>
 
 <div class="grid-100 mobile-grid-100 grid-parent" style="padding-right:30px;">
-	Welcome to your billing HQ. You can manage transactions, add new payment methods, and transfer inactive spend into your other
-	campaigns.
-	<br><br>
-	<!--<b>
-	ACTIVE campaign budget: <span style="color:#23c466; font-size: 16px;">$209</span> </b>
-	<br> INACTIVE budget credit:
-	<b>$84</b> | What is this? This is the amount of currency USD, which resides inside of inactive or archived/ deleted campaigns
-	you've previously made. When you create your next campaign, we will automatically draw from this inactive credit amount
-	before we charge your payment method on file further.-->
+	Welcome to your billing HQ. You can manage transactions, add new payment methods, and transfer inactive spend into your other campaigns.
+	<br>
+	<br>
+	<p><b>ACTIVE campaign budget: <span style="color:#23c466; font-size: 16px;">${{activeBalance.toFixed(2)}}</span> </b></p>
+	<p *ngIf="!!inactiveBalance">INACTIVE budget credit: <b>${{inactiveBalance.toFixed(2)}}</b> | What is this? This is the amount of currency USD, which resides inside of inactive or archived/ deleted campaigns you've previously made. When you create your next campaign, we will automatically draw from this inactive credit amount before we charge your payment method on file further.
+	</p>
 
 </div>
 
@@ -17,13 +14,17 @@
 	<div class="grid-100 mobile-grid-100 grid-parent" style="padding-right:30px;">
 		<h3 style="color:#d2335c;">Manage payment options:</h3>
 		<p>
-			Please enter a preferred credit/ debit card to be charged when campaigns are created:<br>
+			Please enter a preferred credit/ debit card to be charged when campaigns are created:
+			<br>
 		</p>
 		<div *ngIf="cc.cardNumber && !isEditing">
-			{{cc.firstName}} {{cc.lastName}}<br> {{cc.address}}
-			<br> {{cc.city}}, {{cc.state}} {{cc.zip}}<br>
+			{{cc.firstName}} {{cc.lastName}}
+			<br> {{cc.address}}
+			<br> {{cc.city}}, {{cc.state}} {{cc.zip}}
+			<br>
 			<hr> ****-****-*****-{{cc.cardNumber}}
-			<br> {{cc.expMonth}} | {{cc.expYear}}<br>
+			<br> {{cc.expMonth}} | {{cc.expYear}}
+			<br>
 
 			<small><a (click)="isEditing = true" title="Edit">edit billing info</a></small>
 		</div>
@@ -31,65 +32,76 @@
 			<div class="form-group">
 				<div class="grid-100 mobile-grid-100 grid-parent">
 					<input name="firstName" type="text" placeholder="First Name" class="form-control" [(ngModel)]="cc.firstName" required>
-					<br><br>
+					<br>
+					<br>
 				</div>
 				<div class="grid-100 mobile-grid-100 grid-parent">
-					<input name="lastName" type="text" placeholder="Last Name" class="form-control" [(ngModel)]="cc.lastName" required><br><br>
+					<input name="lastName" type="text" placeholder="Last Name" class="form-control" [(ngModel)]="cc.lastName" required>
+					<br>
+					<br>
 				</div>
 				<div class="grid-100 mobile-grid-100 grid-parent">
-					<input name="address" type="text" placeholder="Street address" class="form-control" [(ngModel)]="cc.address" required><br><br>
+					<input name="address" type="text" placeholder="Street address" class="form-control" [(ngModel)]="cc.address" required>
+					<br>
+					<br>
 				</div>
 				<div class="grid-40 mobile-grid-100 grid-parent">
-					<input name="city" type="text" placeholder="City" class="form-control" [(ngModel)]="cc.city" required><br><br>
+					<input name="city" type="text" placeholder="City" class="form-control" [(ngModel)]="cc.city" required>
+					<br>
+					<br>
 				</div>
 				<div class="grid-10 mobile-grid-100 grid-parent">
 					&nbsp;
 				</div>
 				<div class="grid-50 mobile-grid-100 grid-parent">
-					<input name="state" type="text" placeholder="State" class="form-control" [(ngModel)]="cc.state" required><br><br>
+					<input name="state" type="text" placeholder="State" class="form-control" [(ngModel)]="cc.state" required>
+					<br>
+					<br>
 				</div>
 				<div class="grid-40 mobile-grid-100 grid-parent">
-					<input name="country" type="text" placeholder="Country" class="form-control" [(ngModel)]="cc.country" required><br><br>
+					<input name="country" type="text" placeholder="Country" class="form-control" [(ngModel)]="cc.country" required>
+					<br>
+					<br>
 				</div>
 				<div class="grid-10 mobile-grid-100 grid-parent">
 					&nbsp;
 				</div>
 				<div class="grid-50 mobile-grid-100 grid-parent">
-					<input name="zip" type="text" placeholder="Zip" class="form-control" [(ngModel)]="cc.zip" required minlength="5"><br><br>
+					<input name="zip" type="text" placeholder="Zip" class="form-control" [(ngModel)]="cc.zip" required minlength="5">
+					<br>
+					<br>
 				</div>
 
 				<div class="grid-100 mobile-grid-100 grid-parent cc-parent">
 					<div class="grid-20 mobile-grid-20">
-						<input #cc0 name="cc0" type="number" placeholder="1111" class="form-control" [(ngModel)]="cc.num[0]" required min="1000"
-							max="9999" (keyup)="checkNext($event, cc1)" onfocus="this.select()">
+						<input #cc0 name="cc0" type="number" placeholder="1111" class="form-control" [(ngModel)]="cc.num[0]" required min="1000" max="9999" (keyup)="checkNext($event, cc1)" onfocus="this.select()">
 					</div>
 					<div class="grid-5 mobile-grid-5 cc-sep">-</div>
 					<div class="grid-20 mobile-grid-20">
-						<input #cc1 name="cc1" type="number" placeholder="1111" class="form-control" [(ngModel)]="cc.num[1]" required min="1000"
-							max="9999" (keyup)="checkNext($event, cc2)" onfocus="this.select()">
+						<input #cc1 name="cc1" type="number" placeholder="1111" class="form-control" [(ngModel)]="cc.num[1]" required min="1000" max="9999" (keyup)="checkNext($event, cc2)" onfocus="this.select()">
 					</div>
 					<div class="grid-5 mobile-grid-5 cc-sep">-</div>
 					<div class="grid-20 mobile-grid-20">
-						<input #cc2 name="cc2" type="number" placeholder="1111" class="form-control" [(ngModel)]="cc.num[2]" required min="1000"
-							max="9999" (keyup)="checkNext($event, cc3)" onfocus="this.select()">
+						<input #cc2 name="cc2" type="number" placeholder="1111" class="form-control" [(ngModel)]="cc.num[2]" required min="1000" max="9999" (keyup)="checkNext($event, cc3)" onfocus="this.select()">
 					</div>
 					<div class="grid-5 mobile-grid-5 cc-sep">-</div>
 					<div class="grid-20 mobile-grid-20">
-						<input #cc3 name="cc3" type="number" placeholder="1111" class="form-control" [(ngModel)]="cc.num[3]" required min="1000"
-							max="9999" onfocus="this.select()">
+						<input #cc3 name="cc3" type="number" placeholder="1111" class="form-control" [(ngModel)]="cc.num[3]" required min="1000" max="9999" onfocus="this.select()">
 					</div>
 					<div class="clearfix br"></div>
 				</div>
 				<div class="grid-40 mobile-grid-100 grid-parent">
-					<input name="expMonth" type="number" placeholder="Exp Month" class="form-control" [(ngModel)]="cc.expMonth" required min="1"
-						max="12"><br><br>
+					<input name="expMonth" type="number" placeholder="Exp Month" class="form-control" [(ngModel)]="cc.expMonth" required min="1" max="12">
+					<br>
+					<br>
 				</div>
 				<div class="grid-10 mobile-grid-100 grid-parent">
 					&nbsp;
 				</div>
 				<div class="grid-50 mobile-grid-100 grid-parent">
 					<input name="expYear" type="number" placeholder="Exp Year" class="form-control" [(ngModel)]="cc.expYear" required min="2017">
-					<br><br>
+					<br>
+					<br>
 				</div>
 				<div class="grid-40 mobile-grid-100 grid-parent">
 					<input name="cvc" type="number" placeholder="CVC" class="form-control" [(ngModel)]="cc.cvc" required min="100" max="9999">
@@ -101,7 +113,8 @@
 					<a href="https://swayops.com/wiki/cvc.php" target="_blank">Where is CVC/ CVV?</a>
 				</div>
 				<div class="grid-100 mobile-grid-100 grid-parent align-right">
-					<br><button class="btn btn-block btn-sm btn-green1" [disabled]="!f.valid || f.pristine">Save payment info &#187;</button>
+					<br>
+					<button class="btn btn-block btn-sm btn-green1" [disabled]="loading || !f.valid || f.pristine">Save payment info &#187;</button>
 				</div>
 			</div>
 		</form>
@@ -110,7 +123,9 @@
 <div class="grid-40 grid-parent">
 	<h3 style="color:#d2335c;">Billing history:</h3>
 	<p *ngFor="let ch of history">
-		<b>{{ch.created * 1000 | date}}</b> | {{ch.transactionID}} <br> {{ch.id}} | {{ch.name}}<br> Amount:
+		<b>{{ch.created * 1000 | date}}</b> | {{ch.transactionID}}
+		<br> {{ch.id}} | {{ch.name}}
+		<br> Amount:
 		<span style="color:#23c466; font-size: 12px; font-weight: bold;">${{ (ch.amount / 100).toFixed(2) }}</span>
 	</p>
 </div>
