--- a/app/views/assignGame.html
+++ b/app/views/assignGame.html
@@ -57,6 +57,7 @@
 			</div>
 
 			<div align="right">
+				<button class="btn btn-green1" [disabled]="loading" (click)="next()">Skip</button>
 				<button class="btn btn-green1" [disabled]="loading" (click)="assign()">Approve and go to next &#187;</button>
 				<br/><br/>
 				<hr>
