re-enable advertiser signup

--- a/app/views/forgotPassword.html
+++ b/app/views/forgotPassword.html
@@ -1,6 +1,6 @@
 <form class="form" id="login" #f="ngForm" novalidate (ngSubmit)="ForgotPassword()">
 	<div class="top">
-		<div class="grid-50 grid-parent">&nbsp;<!--<a [routerLink]="['/signup']" class="cr8-account" title="Create new account">Create New</a>-->x</div>
+		<div class="grid-50 grid-parent"><a [routerLink]="['/signup']" class="cr8-account" title="Create new account">Create New</a></div>
 		<div class="grid-50 grid-parent align-right"><a [routerLink]="['/login']" class="forgot">Log in</a></div>
 		<div class="grid-100 grid-parent">
 			<h2>FORGOT PASSWORD</h2>
@@ -8,9 +8,13 @@
 		<div class="clearfix"></div>
 	</div>
 	<div class="fields">
-		<div *ngIf="!success" class="field-text">Please enter your email address. You will receive a link to create a new password via email. Please remember to check your spam foler.<br><br></div>
-		<div *ngIf="!success" class="field-item email"><input type="email" placeholder="Email" class="form-control" name="email" [(ngModel)]="form.email" required
-				pattern="^[^@]+@[^@]+\.[^@]+$"></div>
+		<div *ngIf="!success" class="field-text">Please enter your email address. You will receive a link to create a new password via email. Please remember to check your spam foler.
+			<br>
+			<br>
+		</div>
+		<div *ngIf="!success" class="field-item email">
+			<input type="email" placeholder="Email" class="form-control" name="email" [(ngModel)]="form.email" required pattern="^[^@]+@[^@]+\.[^@]+$">
+		</div>
 		<div *ngIf="error" class="notification error">
 			<p>There was an error processing your request, please try again later.</p>
 		</div>
@@ -18,5 +22,7 @@
 			<p>Please check your Email.</p>
 		</div>
 	</div>
-	<div *ngIf="!success" class="actions"><input type="submit" value="Reset password &#187;" [disabled]="!f.valid || loading"></div>
+	<div *ngIf="!success" class="actions">
+		<input type="submit" value="Reset password &#187;" [disabled]="!f.valid || loading">
+	</div>
 </form>
