--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -8,7 +8,7 @@
 			<div class="clearfix"></div>
 		</div>
 		<div class="fields">
-			<div class="field-item company-name"><input placeholder="Name" class="form-control" name="name" [(ngModel)]="form.name" required></div>
+			<div class="field-item company-name"><input placeholder="Company Name" class="form-control" name="name" [(ngModel)]="form.name" required></div>
 			<div class="field-item email"><input placeholder="Email" class="form-control" name="email" [(ngModel)]="form.email" required pattern="^[^@]+@[^@]+\.[^@]+$"></div>
 			<div class="field-item password"><input type="password" placeholder="Password" class="form-control ttip" name="pass" [(ngModel)]="form.pass" required
 					minlength="8" title="Password requires at least 8 characters."></div>
