--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -251,8 +251,8 @@
 						<div class="grid-100 mobile-grid-100 grid-parent" style="padding-right:30px;">
 							<div class="btn-toolbar toolbar-horizontal">
 								<div class="btn-group">
-									<a style="min-height: 20px;" class="view-primary" [class.active]="data.perks.type === 1" (click)="data.perks.type=1"><span class="fui-txt">Ship Physical Product</span></a>
-									<a style="min-height: 20px;" class="view-primary" [class.active]="data.perks.type === 2" (click)="data.perks.type=2"><span class="fui-txt">Give Coupons</span></a>
+									<a style="min-height: 20px;" class="view-primary" [class.active]="data.perks.type === 1" (click)="resetPerks(1)"><span class="fui-txt">Ship Physical Product</span></a>
+									<a style="min-height: 20px;" class="view-primary" [class.active]="data.perks.type === 2" (click)="resetPerks(2)"><span class="fui-txt">Give Coupons</span></a>
 								</div>
 							</div>
 						</div>
@@ -279,10 +279,10 @@
 						<div class="form-group" *ngIf="data.perks.type === 2">
 							<div class="form-group">
 								<div class="grid-20 mobile-grid-100 grid-parent">
-									Perk Name:
+									Coupon Name:
 								</div>
 								<div class="grid-80 mobile-grid-100 grid-parent">
-									<input type="text" [(ngModel)]="data.perks.name" placeholder="My product name..." class="form-control" name="perkName" [disabled]=opts.isEdit>
+									<input type="text" [(ngModel)]="data.perks.name" placeholder="My coupon name..." class="form-control" name="perkName" [disabled]=opts.isEdit>
 								</div>
 							</div>
 							<div class="form-group">
