--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -290,7 +290,7 @@
 									Codes:
 								</div>
 								<div class="grid-80 mobile-grid-100 grid-parent">
-									<textarea [(ngModel)]="data.perks.codes" placeholder="Coupon codes, separated by a space or newline" class="form-control" name="perkCodes" [disabled]=opts.isEdit></textarea>
+									<textarea [(ngModel)]="data.perks.codes" placeholder="Coupon codes, separated by a comma, space or newline" class="form-control" name="perkCodes" [disabled]=opts.isEdit></textarea>
 								</div>
 							</div>
 							<div class="form-group">
