scroll baby scroll

--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -320,7 +320,7 @@
 		<br/>
 	</div>
 </div>
-<div class="grid-23 mobile-grid-100 grid-parent content-holder right-sb">
+<div class="grid-23 mobile-grid-100 grid-parent content-holder right-sb" style="transition: margin-top 200ms ease-out;">
 	<div class="est-reach">
 		<p>MAX REACH</p>
 		<h3></h3>
