fix things not updating right, hopefully

--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -324,8 +324,8 @@
 	<div class="est-reach">
 		<p>MAX REACH</p>
 		<h3></h3>
-		<p class="normal">{{forecast.reach | fmtNum }} Fans</p>
-		<p class="normal">{{forecast.influencers | fmtNum }} Influencers</p>
+		<p class="normal">{{forecast.reach | fmtNum:'0' }} Fans</p>
+		<p class="normal">{{forecast.influencers | fmtNum:'0' }} Influencers</p>
 	</div>
 	<ul class="cat-status">
 		<li>
