--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -68,7 +68,7 @@
 				<div class="form-group">
 					<div class="grid-20 mobile-grid-100 grid-parent">
 						Task To Perform:
-						<br/><a style="font-size:12px;" href="#">[Video Advice]</a>
+						<br><a style="font-size:12px;" href="#">[Video Advice]</a>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
 						<textarea class="flat-textarea" name="task" placeholder="Post a photo or video of you and our product. An example caption could be: “I love using NIKE throughout my Monthly life. Checkout more upcoming items from #NIKE”" [(ngModel)]="data.task" required [disabled]=opts.isEdit></textarea>
@@ -117,12 +117,12 @@
 				</div>
 			</div>
 
-			<br/>
-			<br/>
+			<br>
+			<br>
 			<div class="field-set grid-100 grid-parent head-toggle">
 				<h2 class="heading">2. Targeting <span>*optional</span></h2>
 				<div class="onoffswitch targeting" data-for="toggle-targeting">
-					<input type="checkbox" name="targeting" class="onoffswitch-checkbox" id="targeting" [checked]=opts.targeting>
+					<input type="checkbox" name="targeting" class="onoffswitch-checkbox" id="targeting">
 					<label class="onoffswitch-label" for="targeting">
 						<span class="onoffswitch-inner showhide"></span>
 						<span class="onoffswitch-switch"></span>
@@ -192,21 +192,19 @@
 
 			</div>
 
-			<br/>
-			<br/>
+			<br>
+			<br>
 			<div class="field-set grid-100 grid-parent head-toggle">
 				<h2 class="heading">3. Influencer Groups <span>*optional</span></h2>
 				<div class="onoffswitch influencers" data-for="toggle-influencers">
-					<input type="checkbox" name="influencers" class="onoffswitch-checkbox" id="influencers" [checked]=opts.cats>
+					<input type="checkbox" name="influencers" class="onoffswitch-checkbox" id="influencers">
 					<label class="onoffswitch-label" for="influencers">
 						<span class="onoffswitch-inner showhide"></span>
 						<span class="onoffswitch-switch"></span>
 					</label>
 				</div>
 			</div>
-
 			<div class="content-toggle toggle-influencers">
-
 				<div class="form-group">
 					<div class="grid-100 mobile-grid-100 grid-parent">
 						<div class="grid-70 mobile-grid-100 grid-parent">
@@ -238,12 +236,12 @@
 				</div>
 
 			</div>
-			<br/>
-			<br/>
+			<br>
+			<br>
 			<div class="field-set grid-100 grid-parent">
 				<h2 class="heading" id="giveOut">4. Give out Perks <span>*optional</span></h2>
 				<div class="onoffswitch perks" data-for="toggle-perks">
-					<input type="checkbox" name="perks" class="onoffswitch-checkbox" id="perks" [checked]="opts.perks" [disabled]=opts.isEdit>
+					<input type="checkbox" name="perks" class="onoffswitch-checkbox" id="perks" [disabled]=opts.isEdit>
 					<label class="onoffswitch-label" for="perks">
 						<span class="onoffswitch-inner showhide"></span>
 						<span class="onoffswitch-switch"></span>
@@ -254,7 +252,7 @@
 				<div class="form-group">
 					<div class="grid-100 mobile-grid-100 grid-parent">
 						Which perks would you would like to give to each influencer:
-						<br/>
+						<br>
 						<p class="note info">Giving away perks is highly recommended but not required. Each influencers that accepts your campaign will be sent a perk. Campaigns with perks have an avg performance boost of <b style="color:#04be5b;">350%</b>. If you require the influencer to post with your product please mention it in the task description.</p>
 						<div class="grid-100 mobile-grid-100 grid-parent" style="padding-right:30px;">
 							<div class="btn-toolbar toolbar-horizontal">
@@ -324,8 +322,8 @@
 				<button type="submit" class="btn btn-block btn-lg btn-green1" [disabled]="!f.valid || loading">Save &amp; Launch &#187;</button>
 			</div>
 		</form>
-		<br/>
-		<br/>
+		<br>
+		<br>
 	</div>
 </div>
 <div class="grid-23 mobile-grid-100 grid-parent content-holder right-sb" style="transition: margin-top 200ms ease-out;">
@@ -379,7 +377,7 @@
 				</p>
 				<p *ngIf="!!sidebar.totalCharge">
 					<label style="color:#04be5b;">Amount Due Today:</label> ${{sidebar.totalCharge.toFixed(2)}}
-					<br/>
+					<br>
 					<small style="font-size: 10px;"><img src="/static/img/questionTooltip.png"> Note: Upon creation budgets are pro-rated based on the number of days remaining in the month. Your billing method on file will renew your monthly budget on the 1st of every month therafter.</small>
 				</p>
 			</div>
