allow updating the campaign's task

--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -71,7 +71,7 @@
 						<br><a style="font-size:12px;" href="#">[Video Advice]</a>
 					</div>
 					<div class="grid-80 mobile-grid-100 grid-parent">
-						<textarea class="flat-textarea" name="task" placeholder="Post a photo or video of you and our product. An example caption could be: “I love using NIKE throughout my Monthly life. Checkout more upcoming items from #NIKE”" [(ngModel)]="data.task" required [disabled]=opts.isEdit></textarea>
+						<textarea class="flat-textarea" name="task" placeholder="Post a photo or video of you and our product. An example caption could be: “I love using NIKE throughout my Monthly life. Checkout more upcoming items from #NIKE”" [(ngModel)]="data.task" required></textarea>
 					</div>
 				</div>
 				<div class="form-group">
