change campaign's switch to on/off

--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -7,7 +7,7 @@
 					<div class="onoffswitch status" data-for="toggle-status">
 						<input type="checkbox" name="status" class="onoffswitch-checkbox" id="status" [(ngModel)]="data.status">
 						<label class="onoffswitch-label" for="status">
-							<span class="onoffswitch-inner showhide"></span>
+							<span class="onoffswitch-inner"></span>
 							<span class="onoffswitch-switch"></span>
 						</label>
 					</div>
