--- a/app/views/mTalents.html
+++ b/app/views/mTalents.html
@@ -16,7 +16,7 @@
 			<th>Deals</th>
 			<th>Earnings</th>
 			<th>Your cut</th>
-			<th>Created</th>
+			<th>Followers</th>
 			<th>Contact</th>
 			<th>Actions</th>
 		</tr>
@@ -30,8 +30,9 @@
 			</td>
 			<td>{{FmtMoney(t.infSpend)}}</td>
 			<td>{{FmtMoney(t.agSpend)}}</td>
-			<td>{{t.createdAt * 1000 | date}}</td>
-			<td title="{{contactInfo(t)}}" class="email ttip">View</td>
+			<td>{{t.followers}}</td>
+			<!--<td>{{t.createdAt * 1000 | date}}</td>-->
+			<td class="email ttip" title="{{contactInfo(t)}}">View</td>
 			<td>
 				<!--<button class="btn-info btn-micro ghost" (click)=edlg.show(t)>Edit</button> | -->
 				<button class="btn-scarlet btn-micro ghost" (click)="delete(t)">X</button>
